// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react customized options for image link 1`] = `
<a
  className="a1l1v48i"
  href="https://example.com"
  target="_blank"
>
  <div
    className="ab5l1i6"
    style={
      Object {
        "background": "#fff",
        "color": "#fff",
        "paddingBottom": "80%",
      }
    }
  />
  <img
    alt="Test image"
    className="d1mbjgxe a1p8pt7"
    src="placeholder.jpg"
    srcSet={null}
    style={
      Object {
        "background": "#fff",
        "color": "#fff",
        "filter": "blur(100px)",
        "transform": "scale3d(1.05,1.05,1)",
        "transition": "initial",
      }
    }
  />
</a>
`;

exports[`react customized options for normal image 1`] = `
<div>
  <div
    className="ab5l1i6"
    style={
      Object {
        "background": "#fff",
        "color": "#fff",
        "paddingBottom": "80%",
      }
    }
  />
  <img
    alt="Test image"
    className="d1mbjgxe a1p8pt7"
    src="image.jpg"
    srcSet={null}
    style={
      Object {
        "background": "#fff",
        "color": "#fff",
        "filter": "initial",
        "transform": "initial",
        "transition": "initial",
      }
    }
  />
</div>
`;

exports[`react parse valid input 1`] = `
<div>
  <div
    className="ab5l1i6"
    style={
      Object {
        "background": "transparent",
        "color": "transparent",
        "paddingBottom": "80%",
      }
    }
  />
  <img
    alt="Test image"
    className="d1mbjgxe a1p8pt7"
    src="image.jpg"
    srcSet={null}
    style={
      Object {
        "background": "transparent",
        "color": "transparent",
        "filter": "initial",
        "transform": "initial",
        "transition": "initial",
      }
    }
  />
</div>
`;
